my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EAMETH/EAMETH.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EAMETH.dml:10:1: warning WEXPERIMENTAL: Use of unsupported feature: traits
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EAMETH.dml:16:1: warning WEXPERIMENTAL: Use of unsupported feature: traits
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EAMETH.dml:19:5: error EAMETH: abstract method m overrides existing method
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EAMETH.dml:12:5: previous declaration
